--- a/CS-Source/teteAutoSend/TeteTopApi/TeteTopApi.csproj
+++ b/CS-Source/teteAutoSend/TeteTopApi/TeteTopApi.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Microsoft.Practices.ObjectBuilder">
       <HintPath>..\..\..\bin\Microsoft.Practices.ObjectBuilder.dll</HintPath>
     </Reference>
+    <Reference Include="QWeiboSDK">
+      <HintPath>..\..\..\..\..\testsvnnew11\website\CS-Source\teteAutoSend\teteMicroBlog\bin\Debug\QWeiboSDK.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -55,23 +58,37 @@
   <ItemGroup>
     <Compile Include="Api.cs" />
     <Compile Include="DataContract\CouponData.cs" />
+    <Compile Include="DataContract\FreeShopData.cs" />
+    <Compile Include="DataContract\LogData.cs" />
+    <Compile Include="DataContract\MessageData.cs" />
     <Compile Include="DataContract\ShopData.cs" />
     <Compile Include="DataContract\TradeData.cs" />
     <Compile Include="DataContract\TradeRateData.cs" />
+    <Compile Include="DataContract\WeiboData.cs" />
     <Compile Include="Entity\Coupon.cs" />
+    <Compile Include="Entity\Item.cs" />
     <Compile Include="Entity\ShopInfo.cs" />
     <Compile Include="Entity\Trade.cs" />
     <Compile Include="Entity\TradeRate.cs" />
+    <Compile Include="Entity\Weibo.cs" />
+    <Compile Include="Entity\WeiboID.cs" />
+    <Compile Include="Logic\LostMessageGet.cs" />
     <Compile Include="Logic\ShippingSuccess.cs" />
+    <Compile Include="Logic\ShopAlert.cs" />
+    <Compile Include="Logic\ShopTotalSend.cs" />
+    <Compile Include="Logic\TopApi\TopApiFree.cs" />
     <Compile Include="Logic\TradeSuccess.cs" />
     <Compile Include="Logic\TradeSellerShip.cs" />
     <Compile Include="Logic\WaitSellerConfirm.cs" />
+    <Compile Include="Logic\WaitSellerConfirmTest.cs" />
+    <Compile Include="Logic\WeiboSend.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceiveMessage.cs" />
-    <Compile Include="TopApi\TopApiHaoping.cs" />
+    <Compile Include="Logic\TopApi\TopApiHaoping.cs" />
     <Compile Include="utils.cs" />
     <Compile Include="WebPost.cs" />
+    <Compile Include="ReceiveMessageFree.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
