--- a/iphoneapi/web.config
+++ b/iphoneapi/web.config
@@ -6,7 +6,7 @@
 	</configSections>
 	<dataConfiguration defaultDatabase="DefaultString"/>
 	<connectionStrings>
-		<add name="DefaultString" connectionString="Data Source=localhost;Initial Catalog=teteGetUser;Persist Security Info=True;User ID=tetegetuser;Password=tetegetusert57685768" providerName="System.Data.SqlClient"/>
+		<add name="DefaultString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=C:\Documents and Settings\Administrator\桌面\iphone项目\data\复件 iPhoneShop.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<cachingConfiguration defaultCacheManager="Default Cache Manager">
 		<cacheManagers>
@@ -17,12 +17,11 @@
 		</backingStores>
 	</cachingConfiguration>
 	<system.web>
-		<compilation debug="true" targetFramework="4.0"/>
 		<httpRuntime maxRequestLength="2097151" executionTimeout="3600"/>
 		<customErrors mode="Off">
 		</customErrors>
 		<globalization requestEncoding="utf-8" responseEncoding="utf-8" fileEncoding="utf-8" culture="auto" uiCulture="auto"/>
-		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/></system.web>
+		</system.web>
 	<system.net>
 		<settings>
 			<httpWebRequest useUnsafeHeaderParsing="true"/>
