--- a/top/DataAnalysis/DataAnalysis.Web/web.config
+++ b/top/DataAnalysis/DataAnalysis.Web/web.config
@@ -25,7 +25,7 @@
 	</configSections>
 	<dataConfiguration defaultDatabase="DefaultString"/>
 	<connectionStrings>
-		<add name="DefaultString" connectionString="Data Source=.;Initial Catalog=OnlineTalk;Persist Security Info=True;User ID=sa;Password=123" providerName="System.Data.SqlClient"/>
+		<add name="DefaultString" connectionString="Data Source=.;Initial Catalog=TopDataAnalysis;Persist Security Info=True;User ID=sa;Password=123" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<cachingConfiguration defaultCacheManager="Default Cache Manager">
 		<cacheManagers>
@@ -35,7 +35,9 @@
 			<add encryptionProviderName="" type="Microsoft.Practices.EnterpriseLibrary.Caching.BackingStoreImplementations.NullBackingStore, Microsoft.Practices.EnterpriseLibrary.Caching, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" name="Null Storage"/>
 		</backingStores>
 	</cachingConfiguration>
-	<appSettings/>
+	<appSettings>
+		<add key="hostname" value="http://ding.7fshop.com/"/>
+	</appSettings>	
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
