--- a/top/DataAnalysis/service/TaoBao_GetGoodsOrderService.exe.config
+++ b/top/DataAnalysis/service/TaoBao_GetGoodsOrderService.exe.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<!-- 链接数据库字符串 -->
-	<add key="ConnString" value="Data Source=.;Initial Catalog=TopDataAnalysis;User ID=datadinghq;pwd=datadinghq1988)#!%;" />
+	<appSettings>
+		<!-- 链接数据库字符串 -->
+		<add key="ConnString" value="Data Source=.;Initial Catalog=TopDataAnalysis;User ID=datadinghq;pwd=datadinghq1988)#!%;" />
 
-	<add key="LogAddress" value="D:\\TaoBaoOrder\\GetOrderLog" />
+		<add key="LogAddress" value="D:\\TaoBaoOrder\\GetOrderLog" />
 
-	<add key="GetHour" value="2" />
-	
+		<add key="GetHour" value="2" />
+	</appSettings>
 </configuration>
