--- a/top/DataAnalysis/service/GetTaoBaoOrderExe.exe.config
+++ b/top/DataAnalysis/service/GetTaoBaoOrderExe.exe.config
@@ -8,5 +8,9 @@
 		<add key="LogAddress" value="D:\\TaoBaoOrder\\GetOrderLog" />
 
 		<add key="GetHour" value="2" />
+
+		<add key="appkey" value="12132145"/>
+		<add key="appSecret" value="1fdd2aadd5e2ac2909db2967cbb71e7f"/>
+		
 	</appSettings>
 </configuration>
