--- a/top/DataAnalysis/service/TaoBao_GetGoodsOrderService.exe.config
+++ b/top/DataAnalysis/service/TaoBao_GetGoodsOrderService.exe.config
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+
 		<!-- 链接数据库字符串 -->
-		<add key="ConnString" value="Data Source=.;Initial Catalog=TopDataAnalysis;User ID=datadinghq;pwd=datadinghq1988)#!%;" />
+		<add key="ConnString" value="Data Source=.;Initial Catalog=TopDataAnalysis;User ID=sa;pwd=123;" />
 
 		<add key="LogAddress" value="D:\\TaoBaoOrder\\GetOrderLog" />
 
+		<!-- 抓取订单时间间隔(单位/小时)-->
 		<add key="GetHour" value="2" />
+		
+		<!--更新评价时间-->
+		<add key="UpdatePingHour" value="8"/>
+		
+		<add key="appkey" value="12287381"/>
+		<add key="appSecret" value="d3486dac8198ef01000e7bd4504601a4"/>
 	</appSettings>
 </configuration>
