--- a/top/DataAnalysis/DataAnalysis.Web/web.config
+++ b/top/DataAnalysis/DataAnalysis.Web/web.config
@@ -39,7 +39,7 @@
 		<add key="hostname" value="http://ding.7fshop.com/"/>
 		<add key="appkey" value="12132145"/>
 		<add key="appSecret" value="1fdd2aadd5e2ac2909db2967cbb71e7f"/>
-		<add key="ipdatapath" value="App_Data/ip.data"/>
+		<add key="ipdatapath" value="App_Data\qqwry.dat"/>
 	</appSettings>	
 	<system.web>
 		<!-- 
