--- a/top/DataAnalysis/DataAnalysis.Web/web.config
+++ b/top/DataAnalysis/DataAnalysis.Web/web.config
@@ -40,6 +40,9 @@
 		<add key="appkey" value="12132145"/>
 		<add key="appSecret" value="1fdd2aadd5e2ac2909db2967cbb71e7f"/>
 		<add key="ipdatapath" value="App_Data\qqwry.dat"/>
+
+    <add key="realappkey" value="12133190"/>
+    <add key="realappSecret" value="3442d45c5dcc79decbe8ff4db855a800"/>
 	</appSettings>	
 	<system.web>
 		<!-- 
