--- a/top/CustomerServiceAchievements/CusServiceAchievements.Web/web.config
+++ b/top/CustomerServiceAchievements/CusServiceAchievements.Web/web.config
@@ -36,9 +36,9 @@
     </backingStores>
   </cachingConfiguration>
 	<appSettings>
-		<add key="hostname" value="http://ding.7fshop.com/"/>
-		<add key="appkey" value="12132145"/>
-		<add key="appSecret" value="1fdd2aadd5e2ac2909db2967cbb71e7f"/>
+		<add key="hostname" value="http://kfjx.7fshop.com/"/>
+		<add key="appkey" value="12011973"/>
+		<add key="appSecret" value="1dfcbce8f2e583289c4b2c2500716654"/>
 	</appSettings>
 	<system.web>
 		<!-- 
