--- a/top/Qijia/Qijia.PCI/Qijia.PCI.csproj
+++ b/top/Qijia/Qijia.PCI/Qijia.PCI.csproj
@@ -35,6 +35,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web.Extensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -45,10 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JSONHelper.cs" />
     <Compile Include="MethodGroup.cs" />
     <Compile Include="MethodPCI.cs" />
+    <Compile Include="msg.cs" />
+    <Compile Include="ResponseMsg.cs" />
     <Compile Include="PasswordParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseXMLMsg.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Qijia.DAL\Qijia.DAL.csproj">
+      <Project>{7676C138-FB8C-46B1-885E-161F361E721B}</Project>
+      <Name>Qijia.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Qijia.Model\Qijia.Model.csproj">
+      <Project>{9EA2A17C-E0DC-4BFA-8F07-BE5A266C96A2}</Project>
+      <Name>Qijia.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
